--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,59 @@
 					</section>
 				</div>
 			</header>
-			<main class="main"></main>
+			<main class="main">
+				<section class="degustation">
+					<div class="container">
+						<div class="degustation__wrapper">
+							<ul class="degustation__list">
+								<li class="degustation__item">
+									<p class="degustation__time">Woensdag 12/01</p>
+									<div class="degustation__programm">
+										<p class="degustation__programm-text">Toast Roquefort</p>
+										<span class="degustation__programm-decor"></span>
+										<p class="degustation__programm-text">Penne met Kip en Prei</p>
+									</div>
+								</li>
+								<li class="degustation__item">
+									<p class="degustation__time">Donderdag 13/01</p>
+									<div class="degustation__programm">
+										<p class="degustation__programm-text">Toast Roquefort</p>
+										<span class="degustation__programm-decor"></span>
+										<p class="degustation__programm-text">Penne met Kip en Prei</p>
+									</div>
+								</li>
+								<li class="degustation__item">
+									<p class="degustation__time">Woensdag 14/01</p>
+									<div class="degustation__programm">
+										<p class="degustation__programm-text">Toast Roquefort</p>
+										<span class="degustation__programm-decor"></span>
+										<p class="degustation__programm-text">Penne met Kip en Prei</p>
+									</div>
+								</li>
+								<li class="degustation__item">
+									<p class="degustation__time">Woensdag 15/01</p>
+									<div class="degustation__programm">
+										<p class="degustation__programm-text">Toast Roquefort</p>
+										<span class="degustation__programm-decor"></span>
+										<p class="degustation__programm-text">Penne met Kip en Prei</p>
+									</div>
+								</li>
+								<li class="degustation__item">
+									<p class="degustation__time">Woensdag 16/01</p>
+									<div class="degustation__programm">
+										<p class="degustation__programm-text">Verrassing van de Chef</p>
+										<span class="degustation__programm-decor"></span>
+										<p class="degustation__programm-text">Penne met Kip en Prei</p>
+									</div>
+								</li>
+							</ul>
+							<img class="degustation__img" src="images/degus.webp" alt="degustation photo">
+						</div>
+					</div>
+				</section>
+
+
+			</main>
 			<footer class="footer"></footer>
 		</div>
 		<script src="js/scripts.min.js"></script>
