section feedback and footer desktop

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<header class="header">
+			<!--<header class="header">
 				<div class="container">
 					<nav class="nav">
 						<a href="/" class="logo">
@@ -71,7 +71,7 @@
 										<a href="/" class="heading__social-link">Tw</a>
 									</li>
 								</ul>
-						</div>
+							</div>
 							<picture class="heading__img">
 								<source
 									srcset="images/heading-big.webp"
@@ -88,9 +88,9 @@
 						</div>
 					</section>
 				</div>
-			</header>
+			</header>-->
 			<main class="main">
-				<section class="degustation">
+				<!--<section class="degustation">
 					<div class="container">
 						<div class="degustation__wrapper">
 							<ul class="degustation__list">
@@ -99,7 +99,9 @@
 									<div class="degustation__programm">
 										<p class="degustation__programm-text">Toast Roquefort</p>
 										<span class="degustation__programm-decor"></span>
-										<p class="degustation__programm-text">Penne met Kip en Prei</p>
+										<p class="degustation__programm-text">
+											Penne met Kip en Prei
+										</p>
 									</div>
 								</li>
 								<li class="degustation__item">
@@ -107,7 +109,9 @@
 									<div class="degustation__programm">
 										<p class="degustation__programm-text">Toast Roquefort</p>
 										<span class="degustation__programm-decor"></span>
-										<p class="degustation__programm-text">Penne met Kip en Prei</p>
+										<p class="degustation__programm-text">
+											Penne met Kip en Prei
+										</p>
 									</div>
 								</li>
 								<li class="degustation__item">
@@ -115,7 +119,9 @@
 									<div class="degustation__programm">
 										<p class="degustation__programm-text">Toast Roquefort</p>
 										<span class="degustation__programm-decor"></span>
-										<p class="degustation__programm-text">Penne met Kip en Prei</p>
+										<p class="degustation__programm-text">
+											Penne met Kip en Prei
+										</p>
 									</div>
 								</li>
 								<li class="degustation__item">
@@ -123,26 +129,106 @@
 									<div class="degustation__programm">
 										<p class="degustation__programm-text">Toast Roquefort</p>
 										<span class="degustation__programm-decor"></span>
-										<p class="degustation__programm-text">Penne met Kip en Prei</p>
+										<p class="degustation__programm-text">
+											Penne met Kip en Prei
+										</p>
 									</div>
 								</li>
 								<li class="degustation__item">
 									<p class="degustation__time">Woensdag 16/01</p>
 									<div class="degustation__programm">
-										<p class="degustation__programm-text">Verrassing van de Chef</p>
+										<p class="degustation__programm-text">
+											Verrassing van de Chef
+										</p>
 										<span class="degustation__programm-decor"></span>
-										<p class="degustation__programm-text">Penne met Kip en Prei</p>
+										<p class="degustation__programm-text">
+											Penne met Kip en Prei
+										</p>
 									</div>
 								</li>
 							</ul>
-							<img class="degustation__img" src="images/degus.webp" alt="degustation photo">
+							<img
+								class="degustation__img"
+								src="images/degus.webp"
+								alt="degustation photo"
+							/>
 						</div>
 					</div>
+				</section>-->
+
+				<section class="feedback">
+					<div class="container">
+						<div class="swiper">
+							<div class="swiper-wrapper">
+								<!-- Slides -->
+								<div class="swiper-slide feedback__content">
+									<h3 class="feedback__title">
+										Goede service, lekker eten, toffe ambiance
+									</h3>
+									<p class="feedback__text">
+										Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+										diam nonumy eirmod tempor invidunt ut labore et dolore magna
+										aliquyam erat, sed diam voluptua. At vero eos et accusam et
+										justo duo dolores et ea rebum. Stet clita kasd gubergren.
+									</p>
+									<p class="feedback__author">ALAIN HEYNDRICKX</p>
+								</div>
+								<div class="swiper-slide feedback__content">
+									<h3 class="feedback__title">Goede servicee</h3>
+									<p class="feedback__text">
+										Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+										diam nonumy eirmod tempor invidunt ut labore et dolore magna
+										aliquyam erat, sed diam voluptua..
+									</p>
+									<p class="feedback__author">this other outhor</p>
+								</div>
+								<div class="swiper-slide feedback__content">
+									<h3 class="feedback__title">Goede service toffe ambiance</h3>
+									<p class="feedback__text">
+										Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+										diam nonumy eirmod tempor invidunt ut labore et dolore magna
+										aliquyam erat, sed diam voluptua. At vero eos et accusam et
+										justo duo dolores et ea rebum. Stet clita kasd gubergren
+										aliquyam erat, sed diam voluptua. At vero eos et accusam et
+										justo duo dolores et ea rebum..
+									</p>
+									<p class="feedback__author">Atabegov</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="swiper-btn swiper-btn-prev"></div>
+						<div class="swiper-btn swiper-btn-next"></div>
+					</div>
 				</section>
-
-
 			</main>
-			<footer class="footer"></footer>
+			<footer class="footer">
+				<div class="container">
+					<div class="footer__wrapper">
+						<a class="footer__logo" href="/">
+							<img
+								class="footer__logo-img"
+								src="images/logo2.webp"
+								alt="logo"
+							/>
+						</a>
+						<ul class="heading__social">
+							<li class="heading__social-item">
+								<a href="/" class="heading__social-link">Fb</a>
+							</li>
+							<li class="heading__social-item">
+								<a href="/" class="heading__social-link">Tg</a>
+							</li>
+							<li class="heading__social-item">
+								<a href="/" class="heading__social-link">Ins</a>
+							</li>
+							<li class="heading__social-item">
+								<a href="/" class="heading__social-link">Tw</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</footer>
 		</div>
 		<script src="js/scripts.min.js"></script>
 	</body>
