--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<!--<header class="header">
+			<header class="header">
 				<div class="container">
 					<nav class="nav">
 						<a href="/" class="logo">
@@ -56,19 +56,19 @@
 								A bad day with lunch is better than a good day without it.
 							</h1>
 							<div class="heading__footer">
-								<button class="heading__btn">Reserve a table</button>
+								<button class="heading__btn btn-popup">Reserve a table</button>
 								<ul class="heading__social">
 									<li class="heading__social-item">
-										<a href="/" class="heading__social-link">Fb</a>
+										<a href="/" class="heading__social-link btn-social">Fb</a>
 									</li>
 									<li class="heading__social-item">
-										<a href="/" class="heading__social-link">Tg</a>
+										<a href="/" class="heading__social-link btn-social">Tg</a>
 									</li>
 									<li class="heading__social-item">
-										<a href="/" class="heading__social-link">Ins</a>
+										<a href="/" class="heading__social-link btn-social">Ins</a>
 									</li>
 									<li class="heading__social-item">
-										<a href="/" class="heading__social-link">Tw</a>
+										<a href="/" class="heading__social-link btn-social">Tw</a>
 									</li>
 								</ul>
 							</div>
@@ -88,9 +88,9 @@
 						</div>
 					</section>
 				</div>
-			</header>-->
+			</header>
 			<main class="main">
-				<!--<section class="degustation">
+				<section class="degustation">
 					<div class="container">
 						<div class="degustation__wrapper">
 							<ul class="degustation__list">
@@ -154,7 +154,7 @@
 							/>
 						</div>
 					</div>
-				</section>-->
+				</section>
 
 				<section class="feedback">
 					<div class="container">
@@ -214,16 +214,16 @@
 						</a>
 						<ul class="heading__social">
 							<li class="heading__social-item">
-								<a href="/" class="heading__social-link">Fb</a>
+								<a href="/" class="heading__social-link btn-social">Fb</a>
 							</li>
 							<li class="heading__social-item">
-								<a href="/" class="heading__social-link">Tg</a>
+								<a href="/" class="heading__social-link btn-social">Tg</a>
 							</li>
 							<li class="heading__social-item">
-								<a href="/" class="heading__social-link">Ins</a>
+								<a href="/" class="heading__social-link btn-social">Ins</a>
 							</li>
 							<li class="heading__social-item">
-								<a href="/" class="heading__social-link">Tw</a>
+								<a href="/" class="heading__social-link btn-social">Tw</a>
 							</li>
 						</ul>
 					</div>
