--- a/app/index.html
+++ b/app/index.html
@@ -18,28 +18,28 @@
 			<header class="header">
 				<div class="container">
 					<nav class="nav">
-						<a href="/" class="logo">
+						<a href="#" class="logo">
 							<picture class="logo__img">
 								<source
 									srcset="images/logo.webp"
 									type="image/webp"
-									media="(min-width:960px)"
+									media="(min-width:1141px)"
 								/>
 								<img src="images/logo2.webp" alt="logo" />
 							</picture>
 						</a>
 						<ul class="menu">
 							<li class="menu__item">
-								<a href="/" class="menu__link">À la carte</a>
+								<a href="#" class="menu__link">À la carte</a>
 							</li>
 							<li class="menu__item">
-								<a href="/" class="menu__link">Wijnkaart</a>
+								<a href="#" class="menu__link">Wijnkaart</a>
 							</li>
 							<li class="menu__item">
-								<a href="/" class="menu__link">Lunchmenu</a>
+								<a href="#" class="menu__link">Lunchmenu</a>
 							</li>
 							<li class="menu__item">
-								<a href="/" class="menu__link">Contact</a>
+								<a href="#" class="menu__link">Contact</a>
 							</li>
 						</ul>
 						<a class="phone" href="tel:+3292825725">
@@ -48,6 +48,7 @@
 							</svg>
 							<span class="phone__number">+32 9 282 57 25</span>
 						</a>
+						<button class="burger"><span class="burger-line"></span></button>
 					</nav>
 					<section class="heading">
 						<div class="heading__wrapper">
@@ -61,16 +62,16 @@
 								</button>
 								<ul class="heading__social">
 									<li class="heading__social-item">
-										<a href="/" class="heading__social-link btn-social">Fb</a>
+										<a href="#" class="heading__social-link btn-social">Fb</a>
 									</li>
 									<li class="heading__social-item">
-										<a href="/" class="heading__social-link btn-social">Tg</a>
+										<a href="#" class="heading__social-link btn-social">Tg</a>
 									</li>
 									<li class="heading__social-item">
-										<a href="/" class="heading__social-link btn-social">Ins</a>
+										<a href="#" class="heading__social-link btn-social">Ins</a>
 									</li>
 									<li class="heading__social-item">
-										<a href="/" class="heading__social-link btn-social">Tw</a>
+										<a href="#" class="heading__social-link btn-social">Tw</a>
 									</li>
 								</ul>
 							</div>
@@ -78,7 +79,7 @@
 								<source
 									srcset="images/heading-big.webp"
 									type="image/webp"
-									media="(min-width:960px)"
+									media="(min-width:1141px)"
 								/>
 								<source
 									srcset="images/heading.webp"
@@ -162,7 +163,6 @@
 					<div class="container">
 						<div class="swiper">
 							<div class="swiper-wrapper">
-								<!-- Slides -->
 								<div class="swiper-slide feedback__content">
 									<h3 class="feedback__title">
 										Goede service, lekker eten, toffe ambiance
@@ -207,7 +207,7 @@
 			<footer class="footer">
 				<div class="container">
 					<div class="footer__wrapper">
-						<a class="footer__logo" href="/">
+						<a class="footer__logo" href="#">
 							<img
 								class="footer__logo-img"
 								src="images/logo2.webp"
@@ -216,16 +216,16 @@
 						</a>
 						<ul class="heading__social">
 							<li class="heading__social-item">
-								<a href="/" class="heading__social-link btn-social">Fb</a>
+								<a href="#" class="heading__social-link btn-social">Fb</a>
 							</li>
 							<li class="heading__social-item">
-								<a href="/" class="heading__social-link btn-social">Tg</a>
+								<a href="#" class="heading__social-link btn-social">Tg</a>
 							</li>
 							<li class="heading__social-item">
-								<a href="/" class="heading__social-link btn-social">Ins</a>
+								<a href="#" class="heading__social-link btn-social">Ins</a>
 							</li>
 							<li class="heading__social-item">
-								<a href="/" class="heading__social-link btn-social">Tw</a>
+								<a href="#" class="heading__social-link btn-social">Tw</a>
 							</li>
 						</ul>
 					</div>
@@ -237,11 +237,14 @@
 				<div class="modal-box">
 					<button class="modal-close">✕</button>
 					<form class="modal-form">
-
 						<!-- Hidden Required Fields -->
-						<input type="hidden" name="project_name" value="Tzeezotje">
-						<input type="hidden" name="admin_email" value="siteschool2021@mail.ru">
-						<input type="hidden" name="form_subject" value="Reserve a table">
+						<input type="hidden" name="project_name" value="Tzeezotje" />
+						<input
+							type="hidden"
+							name="admin_email"
+							value="siteschool2021@mail.ru"
+						/>
+						<input type="hidden" name="form_subject" value="Reserve a table" />
 						<!-- END Hidden Required Fields -->
 
 						<input
@@ -258,7 +261,7 @@
 							placeholder="Enter your phone"
 							required
 						/>
-						<button class="modal-form__btn " type="submit">Send</button>
+						<button class="modal-form__btn" type="submit">Send</button>
 					</form>
 				</div>
 			</div>
